# speq

./: CLAUDE.md  Cargo.toml  README.md
doc/: initial-specification.md  todo.md
fixtures/: petstore.yaml
src/: app.rs  main.rs  spec.rs  tree.rs
src/parser/: mod.rs  v3.rs
src/ui/: detail.rs  mod.rs  schema_list.rs  statusbar.rs
